Bug 14436 - Weborder Mobile: Reload button overlaps the Captcha box and their order is different to Weborder skin It fixes the Bug 14435 as well.

--- a/skins/retail/css/confirm.css
+++ b/skins/retail/css/confirm.css
@@ -65,21 +65,27 @@
 }
 .confirmPayCard .captcha_container {
     position: relative;
-    left: 230px;
+    left: 225px;
+}
+.confirmPayCard .captcha_wrap {
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    width: 100px;
 }
 .confirmPayCard .captcha {
-    display: inline-block;
-    vertical-align: middle;
+    margin-top: 4px;
+    height: 30px;
 }
 .confirmPayCard .btn-reload {
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: top;
     height: 20px;
     font-size: 15px;
     line-height: 20px;
     width: 70px;
+    margin-top: 4px;
 }
-
 #popup .order-items {
     max-height: 335px;
     margin: 0 10px;
